@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*kernel-eeepc-2.6.31 (11 Sep 2009)
+
+  11 Sep 2009; Lance Albertson <ramereth@gentoo.org>
+  +kernel-eeepc-2.6.31.ebuild:
+  Version bump
+
 *kernel-eeepc-2.6.29 (29 Mar 2009)
 
   29 Mar 2009; Lance Albertson <ramereth@gentoo.org>
